Week-1 assignment HTML and CSS practice assignment from Sobelemabo Kalio

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Week-1-Task</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Week-1-Task</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="line">
+        <hr />
+      </div>
+      <div class="header">
+        <h3 class="spacing">sneakers</h3>
+        <h6 class="spacing">Collections</h6>
+        <h6 class="spacing">Men</h6>
+        <h6 class="spacing">Women</h6>
+        <h6 class="spacing">About</h6>
+        <h6 class="spacing">Contacts</h6>
+      </div>
+      <div class="icon">
+        <img src="cart.png" alt="mycart" id="cartimage" class="shiftright" />
+        <img
+          src="profilepicture.jpg"
+          alt="myprofilepicture"
+          id="profileimage"
+          class="shiftright"
+        />
+      </div>
+      <div class="leftbody">
+        <img src="jordan3.jpg" alt="shoes" id="jordan3" />
+        <img src="jordan3.jpg" alt="shoes" id="jordan3b" class="j3b" />
+        <img src="jordan2.jpg" alt="shoes" id="jordan2" />
+        <img src="jordan1.jpg" alt="shoes" id="jordan1" />
+        <img src="jordan4.jpg" alt="shoes" id="jordan4" />
+      </div>
+      <div class="rightbody">
+        <h3 style="color: rgba(206, 36, 36, 0.747);">SNEAKER COMPANY</h3>
+        <h1>Fall Limited Edition Sneakers</h1>
+        <p style="line-height: 1.5;">
+          These low-profile sneakers are your perfect casual wear companion.
+          Featuring a durable sole, they'll withsand everything the weather can
+          offer.
+        </p>
+        <div class="fgrs">
+          <div class="prc"><h2>$125.00</h2></div>
+          <div class="price"><p>$250.00</p></div>
+          <div class="psntg">
+            <div class="kkkk"><h5>50%</h5></div>
+          </div>
+          <div class="qnty">
+            <p>-</p>
+            <p>0</p>
+            <p>+</p>
+          </div>
+          <button type="submit" class="bttn">
+            <img src="cart.png" alt="cart" width="20px" height="20px" />Add to
+            cart
+          </button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
